Fix overflow behaviour edge case
Ensure that luminous widgets will overflow with scroll
bars all the time

--- a/style/luminous.scss
+++ b/style/luminous.scss
@@ -43,6 +43,7 @@
   font-size:inherit; 
   text-align:left;
   font-family: "Consolas", "DejaVu Sans Mono", monospace;
+  overflow: auto;
   
   border: 2px solid #ddd;
   border-radius: 5px;
